compiler/test/fail_compilation/test23672.i
/*
TEST_OUTPUT:
---
fail_compilation/test23672.i(9): Error: found `End of File` when expecting `)`
---
*/

extern int feof (FILE *__strea
